fixed login divider background color in dark mode (#2064)

--- a/src/routes/LoginBoard/LoginBoard.scss
+++ b/src/routes/LoginBoard/LoginBoard.scss
@@ -182,7 +182,8 @@
   }
 
   @media #{$tablet} {
-    .login-board__form-wrapper {
+    .login-board__form-wrapper,
+    .login-board__divider::after {
       background: $color-dark-two;
     }
   }
